# installer

data/: application.css  installer.desktop  io.elementary.installer.desktop.in  io.elementary.installer.wrapper  meson.build
debian/: 99pop-installer  control  rules
po/: POTFILES  de.po  fr.po  pt_BR.po  tr.po
po/extra/: pt_BR.po
src/: Application.vala  MainWindow.vala  Utils.vala  meson.build
src/Dialogs/: DecryptDialog.vala  ErrorDialog.vala
src/Helpers/: LogHelper.vala
src/Objects/: Configuration.vala  InstallOptions.vala  Mount.vala
src/Views/: AbstractInstallerView.vala  AlongsideView.vala  CheckView.vala  DecryptionView.vala  DiskView.vala  EncryptView.vala  ErrorView.vala  KeyboardLayoutView.vala  LanguageView.vala  OptionSelectViews.vala  OptionsView.vala  PartitioningView.vala  ProgressView.vala  RefreshView.vala  RequestView.vala  ResizeView.vala  SuccessView.vala  TimezoneView.vala  TryInstallView.vala  UpgradeView.vala  User.vala  UserView.vala
src/Widgets/: DecryptMenu.vala  DiskGrid.vala  IconChooser.vala  InstallTypeGrid.vala  PartitionMenu.vala  Username.vala  VariantWidget.vala
